--- a/pom.xml
+++ b/pom.xml
@@ -18,6 +18,7 @@
 		<maven-jar-plugin.version>3.1.1</maven-jar-plugin.version>
 	</properties>
 	<dependencies>
+	
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-data-jpa</artifactId>
@@ -56,8 +57,23 @@
 
 	</dependencies>
 
+<distributionManagement>
+    <repository>
+    <id>deploymentRepo</id>
+    <name>Nexus Repository</name>
+    <url>http://192.168.1.23:8081/repository/maven-releases/</url>
+   
+    </repository>
+   
+    </distributionManagement>
 	<build>
 		<plugins>
+		<plugin>
+               <groupId>org.apache.maven.plugins</groupId>
+               <artifactId>maven-resources-plugin</artifactId>
+               <version>3.1.0</version>
+           </plugin>
+		
 			<plugin>
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
