--- a/DockerFile
+++ b/DockerFile
@@ -1,4 +1,4 @@
 FROM openjdk:11
-EXPOSE 8080
-ADD target/devops-integration.jar achat.jar 
-ENTRYPOINT ["java","-jar","/devops-integration.jar"]
+EXPOSE 8089
+ADD target/achat-1.0.jar achat.jar
+ENTRYPOINT ["java", "-jar", "achat.jar"]
