--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,19 +1,43 @@
 version: "3.3"
+
 services:
-  mysqlbase:
-    container_name: mysqlbase
-    image: mysql:8
+
+  mysqldb:
+    image: mysql:5.7
+    container_name: mysqldbco
     restart: unless-stopped
+    env_file: ./.env
     environment:
-    MYSQL_DATABASE: achatdb
-      MYSQL_ROOT_PASSWORD: 
+      MYSQL_ROOT_PASSWORD: 'root'
+      MYSQL_DATABASE: 'achatdb'
+      MYSQL_USER: 'root'
+      MYSQL_PASSWORD: 'root'
+      MYSQL_ROOT_HOST: '%'
+    ports:
+      - 3306:3306
     volumes:
-      - /home/mysql/data:/var/lib/mysql
-  spring_app:
-    image: mouhamedbannour/achat-1.0-s7:latest
-    container_name: achatspring
+      - db:/var/lib/mysql
+  app:
+    depends_on:
+      - mysqldb
+    image:  mouhamedbannour/achat
     restart: on-failure
+    env_file: ./.env
     ports:
       - 8089:8089
-    depends_on:
-      - mysqlbase
+    environment:
+      SPRING_APPLICATION_JSON: '{
+        "spring.datasource.url"  : "jdbc:mysql://mysqldb:3306/achatdb?useSSL=false",
+        "spring.datasource.username" : "root",
+        "spring.datasource.password" : "root",
+        "spring.jpa.properties.hibernate.dialect" : "org.hibernate.dialect.MySQL5InnoDBDialect",
+        "spring.jpa.hibernate.ddl-auto" : "update"
+      }'
+
+    volumes:
+      - .m2:/root/.m2
+    stdin_open: true
+    tty: true
+
+volumes:
+  db:
