--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,32 +3,30 @@ version: "3.3"
 services:
   mysqldb:
     image: mysql:5.7
-    container_name: mysqldbco
+    container_name: mysqldb
     restart: unless-stopped
-    env_file: ./.env
     environment:
-      MYSQL_ROOT_PASSWORD: '$MYSQLDB_ROOT_PASSWORD'
-      MYSQL_DATABASE: '$MYSQLDB_DATABASE'
-      MYSQL_USER: '$MYSQLDB_USER'
-      MYSQL_PASSWORD: '$MYSQL_PASSWORD'
+      MYSQL_ROOT_PASSWORD: ''
+      MYSQL_DATABASE: 'achatdb'
+      MYSQL_USER: 'ANY'
+      MYSQL_PASSWORD: ''
       MYSQL_ROOT_HOST: '%'
     ports:
-      - $MYSQLDB_LOCAL_PORT:$MYSQLDB_DOCKER_PORT
+      - 3306:3306
     volumes:
       - db:/var/lib/mysql
-  app:
+  achatback:
     depends_on:
       - mysqldb
-    image:  azizbenhaha/spring-app
+    image:  mogaadions/achat
     restart: on-failure
-    env_file: ./.env
     ports:
-      - $SPRING_LOCAL_PORT:$SPRING_DOCKER_PORT
+      - 8089:8089
     environment:
       SPRING_APPLICATION_JSON: '{
-        "spring.datasource.url"  : "jdbc:mysql://mysqldb:$MYSQLDB_DOCKER_PORT/$MYSQLDB_DATABASE?useSSL=false",
-        "spring.datasource.username" : "$MYSQLDB_USER",
-        "spring.datasource.password" : "$MYSQLDB_ROOT_PASSWORD",
+        "spring.datasource.url"  : "jdbc:mysql://mysqldb:3306/achatdb?useSSL=false",
+        "spring.datasource.username" : "root",
+        "spring.datasource.password" : "root",
         "spring.jpa.properties.hibernate.dialect" : "org.hibernate.dialect.MySQL5InnoDBDialect",
         "spring.jpa.hibernate.ddl-auto" : "update"
       }'
@@ -36,6 +34,5 @@ services:
       - .m2:/root/.m2
     stdin_open: true
     tty: true
-
 volumes:
   db:
