--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,38 +1,31 @@
-version: "3.3"
-
+version: "3"
 services:
-  mysqldb:
-    image: mysql:5.7
-    container_name: mysqldb
-    restart: unless-stopped
-    environment:
-      MYSQL_ROOT_PASSWORD: ''
-      MYSQL_DATABASE: 'achatdb'
-      MYSQL_USER: 'ANY'
-      MYSQL_PASSWORD: ''
-      MYSQL_ROOT_HOST: '%'
-    ports:
-      - 3308:3308
-    volumes:
-      - db:/var/lib/mysql
-  achatback:
-    depends_on:
-      - mysqldb
-    image:  mogaadions/achat
-    restart: on-failure
-    ports:
-      - 8089:8089
-    environment:
-      SPRING_APPLICATION_JSON: '{
-        "spring.datasource.url"  : "jdbc:mysql://mysqldb:3306/achatdb?useSSL=false",
-        "spring.datasource.username" : "root",
-        "spring.datasource.password" : "root",
-        "spring.jpa.properties.hibernate.dialect" : "org.hibernate.dialect.MySQL5InnoDBDialect",
-        "spring.jpa.hibernate.ddl-auto" : "update"
-      }'
-    volumes:
-      - .m2:/root/.m2
-    stdin_open: true
-    tty: true
+    backend:
+        image: dhekraamamou/achat
+        ports:
+            - "8089:8089"
+        restart: unless-stopped
+        container_name: spring
+        depends_on:
+            - sql_db
+        environment:
+            SPRING_DATASOURCE_URL: jdbc:mysql://sql_db:3306/achatdb?createDatabaseIfNotExist=true
+            SPRING_DATASOURCE_USERNAME: root
+            SPRING_DATASOURCE_PASSWORD: root
+
+    sql_db:
+        image: mysql:8
+        container_name: sql_db
+        restart: unless-stopped
+        ports:
+            - "3306:3306"
+        environment:
+            - MYSQL_ROOT_PASSWORD=root
+            - MYSQL_DATABASE=tpachat
+        volumes:
+            - "db_volume:/var/lib/mysql"
+
+
+
 volumes:
-  db:
+  db_volume: {}
