--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,7 +5,7 @@ services:
         ports:
             - "8089:8089"
         restart: unless-stopped
-        container_name: spring
+        container_name: springg
         depends_on:
             - sql_db
         environment:
