--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,7 @@
 version: "3"
 services:
     backend:
-        image: dhekraamamou/achat
+        image: dhekraamamou/achat1
         ports:
             - "8089:8089"
         restart: unless-stopped
