--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,11 +1,11 @@
 version: "3"
 services:
     backend:
-        image: dhekraamamou/achat1
+        image: dhekraamamou/achat-1.0-s7:latest
         ports:
             - "8089:8089"
         restart: unless-stopped
-        container_name: springg
+        container_name: spring
         depends_on:
             - sql_db
         environment:
@@ -23,9 +23,15 @@ services:
             - MYSQL_ROOT_PASSWORD=root
             - MYSQL_DATABASE=tpachat
         volumes:
-            - "db_volume:/var/lib/mysql"
-
-
-
+            - "db_volume:/var/lib/mysql"   
+  
+    frontend:
+        image: dhekraamamou/frontenddevops
+        depends_on:
+            - backend
+        ports:
+            - "4200:80"
+            
 volumes:
   db_volume: {}
+
