--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,24 +1,26 @@
 
-#http://localhost:8089/SpringMVC/...
+# http://localhost:8089/SpringMVC/client/retrieve-all-clients
 
-#Server configuration
 server.servlet.context-path=/SpringMVC
 server.port=8089
-
-### DATABASE ###
+ 
+### DATABASE ### createDatabaseIfNotExist=true&
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
-spring.datasource.url=jdbc:mysql://mysqlbase:3306/achatdb?useUnicode=true&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=UTC
+spring.datasource.url=jdbc:mysql://mysqlbase:3306/devops?useUnicode=true&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=UTC
 spring.datasource.username=root
 spring.datasource.password=
 ### JPA / HIBERNATE ###
+#afficher toutes les requetes sql
 spring.jpa.show-sql=true
+#spring.jpa.generate-ddl=true
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5InnoDBDialect
-
-#logging configuration
-logging.level.com.zaxxer.hikari=INFO
-logging.level.org.springframework=INFO 
+ 
+#logging configuration 
+logging.level.org=ERROR
+logging.level.com.zaxxer.hikari=ERROR
 logging.level.root=INFO
+logging.file.name=C:/logs/gestion-stock.log
+logging.pattern.file=%d{yyyy-MM-dd HH:mm:ss} - %-5level - %logger{60} - %msg%n
 logging.pattern.console=%d{yyyy-MM-dd HH:mm:ss} - %-5level - %logger{60} - %msg%n
-
 
